--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,9 @@
                 "_id"
             ]
         }],
-        "max-len": 0
+        "max-len": 0,
+        "no-plusplus": 0,
+        "no-mixed-operators": 0
 
     },
     "settings": {
