--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
         "no-underscore-dangle": [0],
         "max-len": 0,
         "no-plusplus": 0,
-        "no-mixed-operators": 0
+        "no-mixed-operators": 0,
+        "import/prefer-default-export": "off"
 
     },
     "settings": {
